Fixed text overflow in side menu

--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -97,6 +97,11 @@
   cursor: pointer;
 }
 
+.app > nav.side li > p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .app > nav.side li.spacer {
   margin-bottom: 15px;
   height: 5px;
